--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-hook-form": "^7.65.0",
     "react-icons": "^5.5.0",
     "react-loading-skeleton": "^3.5.0",
+    "react-toastify": "^11.0.5",
     "swiper": "^12.0.2"
   },
   "devDependencies": {
