--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@next/third-parties": "^15.5.5",
     "axios": "^1.12.2",
     "firebase": "^12.4.0",
     "next": "15.5.4",
